# super-image-viewer

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json
src/: api.js  image-view.css  image-view.html  image-view.js  index.html  renderer.js  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
