[package]
name = "super-image-viewer"
version = "1.0.0"
description = "Mental context image grid viewer"
authors = ["slaur"]
edition = "2021"

[lib]
name = "super_image_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
windows-sys = { version = "0.61", features = ["Win32_Graphics_Dwm"] }
